-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
None
-
Qt Creator 2.8.1, Qt Creator 3.0.0-rc1, Qt Creator 3.3.0, Qt Creator 15.0.0
-
Ubuntu 12.04
Ubuntu 14.04
-
2c61eac1c (master), a11800ca1 (master), b13a2804f (master), 68074eae5 (master)
- Create a git repository which contains a Qt project, a file which is not part of this project and at least one change to the file outside the project.
- Open this project in Creator.
- Compare the output of "Tools" -> "Git" -> "Current Project" -> "Log Project ..." and "Tools" -> "Git" -> "Local Repository" -> "Log".
Both give exactly the same output.
It seems like "Current Project" does not care about the project at all and simply refers to directories. Either this should be fixed or renamed to reflect the actual behavior.
Found while writing Squish test tst_git_local: https://codereview.qt-project.org/64875
- relates to
-
QTCREATORBUG-31946 After switching the active project, git continues to work with the previous one
-
- Closed
-
- replaces
-
QTCREATORBUG-10204 Current Project is misleading
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-10170 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 476402,2 | Git: Change default shortcuts for "Current Project" to Repository | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 476404,3 | Doc: Update shortcut descriptions | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 585410,2 | Git: Clarify "Current Project" menu and locator entry | master | qt-creator/qt-creator | Status: MERGED | +2 | +1 |
| 587327,4 | SquishTests: Update tst_git_local for clarified menu | master | qt-creator/qt-creator | Status: MERGED | +2 | +1 |